--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="header--content">
       <h1>A Tremendous Post Title</h1>
-      <p><strong><em>November 5th, 2018</em> by Writerton McWriterpants</strong></p>
+      <p><strong><em>November 5th, 2018</em> by Stewart ilondanga</strong></p>
       <h2>An Inspiring Subtitle</h2>
     </div>
 
